# video_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
video_api/: script.py
video_api/users/: models.py  serializers.py  tests.py  urls.py  views.py
video_api/users/middleware/: jwt_auth.py
video_api/video_api/: asgi.py  settings.py  urls.py  wsgi.py
video_api/videos/: admin.py  models.py  tests.py  urls.py
video_api/videos/api/v1/: serializers.py  views.py
video_api/videos/management/commands/: gen_fake_data.py  runscript.py
video_api/videos/migrations/: 0001_initial.py  0002_videofile_like.py  0003_rename_quantity_videofile_quality_and_more.py  0004_alter_videofile_file.py  0005_alter_like_unique_together_and_more.py
video_api/videos/services/: statistics.py  video_generation.py
video_api/videos/test_data_gen/: gen_fake_data.py
